Bug 1203376 - Honor filter region settings for lighting filters. r=mstange